# musl

./: CMakeLists.txt
arch/generic/bits/: stat.h
include/: endian.h  fcntl.h
